Avoid weird wrapping edge cases and all subtractions are now positive answers

--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ button:active {
 
 .item {
     /* background-color: green; */
-    width: 23vw;
+    width: 22vw;
     margin-left: 1vw;
     margin-right: 1vw;
     margin-top: 0.45vh;
